--- a/src/app.scss
+++ b/src/app.scss
@@ -4,12 +4,17 @@ html {
   font-size: 16px;
 }
 
+
 h1 {
   font-size: 52px;
 }
 
 h4 {
   font-size: 32px;
+}
+
+h3 {
+  font-size: 40px;
 }
 
 * {
@@ -34,6 +39,7 @@ button {
 
 div.card {
   width: 264px;
+  height: 439px;
   display: flex;
   flex-direction: column;
   font-family: $markazi;
@@ -42,13 +48,17 @@ div.card {
   overflow: hidden;
   background-color: $highlight-color1;
 
-  img {
-    width: 100%;
+  img.cardImage {
+    width: 264px;
+    height: 175px;
+    object-fit: cover;
+    flex-grow: 1;
   }
 
   .card_data 
   {
     display: grid;
+    height: 100%;
     gap: 1rem;
     padding: 0 1rem;
     margin: 1rem 0;
@@ -67,6 +77,8 @@ div.card {
     strong {
       display: flex;
       gap: 1rem;
+      justify-content: flex-start;
+      align-items: flex-end;
 
       img {
         width: 20px;
