major updates, responsive design fixed

--- a/src/Global.scss
+++ b/src/Global.scss
@@ -5,3 +5,5 @@
 @use "./components/footer";
 @use "./components/button";
 @use "./components/cards";
+@use "./components/tcards";
+@use "./components/testimonies";
