--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -11,3 +11,7 @@ $secondary-color1: #EE9972;
 $secondary-color2: #FBDABB;
 $highlight-color1: #EDEFEE;
 $highlight-color2: #333333;
+
+//sizes
+$small-scrn: 1000px;
+$med-scrn:800px;
