--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -46,6 +46,7 @@ footer {
   @media screen and (max-width:$small-scrn) {
     & {
       width: 100%;
+      padding-left: 2rem;
       div{
         width:100%;
         height: auto;
