--- a/src/components/_testimonies.scss
+++ b/src/components/_testimonies.scss
@@ -1,40 +1,53 @@
 @use "../Variables.scss" as *;
 
 section.testimonies {
-    position: relative;
-    width: 100%;
-    background-color: $primary-color1;
-    height: 590px;
-    padding: 100px 0;
+  position: relative;
+  width: 100%;
+  background-color: $primary-color1;
+  height: 590px;
+  padding: 100px 0;
 
-    .container {
-        display: grid;
-        grid-template-rows: 100px 300px;
-        margin: 0 auto;
-        justify-items: center;
-        align-items: center;
-        width: 75%;
+  .container {
+    display: grid;
+    grid-template-rows: 100px 300px;
+    margin: 0 auto;
+    justify-items: center;
+    align-items: center;
+    width: 75%;
+
+    .cardHolder {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      gap: 2rem;
+    }
+  }
+
+  @media screen and (max-width: $small-scrn) {
+    & {
+      padding: 100px 0;
+      width: 100%;
+      height: auto;
+      .container {
+        width: 100%;
+        grid-template-rows: 100px 1fr;
 
         .cardHolder {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr 1fr;
-            gap: 2rem;
+          grid-template-columns: 1fr;
         }
+      }
     }
+  }
 
-    @media screen and (max-width:$small-scrn) {
-        & {
-            padding: 100px 0;
-            width: 100%;
-            height: auto;
-            .container{
-                width: 100%;
-                grid-template-rows: 100px 1fr;
-
-                .cardHolder {
-                    grid-template-columns: 1fr;
-                }
-            }
+  @media screen and (max-width: $med-scrn) and (min-width:$small-scrn) {
+    & {
+        padding: 0;
+      .container {
+        grid-template-rows: 100px 1fr;
+        .cardHolder {
+          grid-template-columns: 1fr 1fr;
+          grid-template-rows: 1fr 1fr;
         }
+      }
     }
+  }
 }
