--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -13,6 +13,7 @@ header {
     height: auto;
     margin: 0 auto;
     padding-top: 2rem;
+    padding-bottom: 2rem;
     justify-content: space-between;
     align-items: flex-start;
 
@@ -45,6 +46,7 @@ header {
     & {
       min-width: 400px;
       .container {
+        flex-direction: column-reverse;
         justify-content: flex-start;
         width: 100%;
         padding: 2rem;
