started developing form

--- a/src/_app.scss
+++ b/src/_app.scss
@@ -28,7 +28,7 @@ a, a:hover, a:focus, a:visited {
   text-decoration: none;
 }
 
-#root {
+main {
   display: grid;
   width: 100%;
   min-width: 400px;
