--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -4,6 +4,7 @@ footer {
   display: flex;
   background-color: $secondary-color2;
   font-family: $markazi;
+  grid-row: 3/4;
 
   div {
     display: flex;
