--- a/src/components/_bookingForm.scss
+++ b/src/components/_bookingForm.scss
@@ -6,20 +6,22 @@ form.bookingForm {
     grid-template-rows: repeat(auto-fill, 30px);
     align-items: center;
     max-width: 400px;
-    gap: 20px;
+    gap: 10px;
     margin: 0 auto;
     padding: 2rem;
     font-size: 18px;
     grid-row: 1 / 3;
 
     input, option, select{
-        text-align: center;
+        text-align: right;
         padding: .25rem;
     }
 
     input[type=submit]{
+        margin-top: 3rem;
         padding: .5rem 1rem;
         grid-column: span 2;
+        text-align: center;
     }
 
 }
