--- a/src/components/_bookingForm.scss
+++ b/src/components/_bookingForm.scss
@@ -11,9 +11,15 @@ form.bookingForm {
     padding: 2rem;
     font-size: 18px;
     grid-row: 1 / 3;
+    font-family: $markazi;
 
-    input, option, select{
+    input{
         text-align: right;
+        padding: .25rem;
+    }
+
+    select, option {
+        text-align: center;
         padding: .25rem;
     }
 
@@ -22,6 +28,14 @@ form.bookingForm {
         padding: .5rem 1rem;
         grid-column: span 2;
         text-align: center;
+    }
+
+    .error {
+        color: red;
+        grid-column: 1/3;
+        font-size: 12px;
+        text-align: right;
+        align-self: flex-start;
     }
 
 }
