fixed confirmed scss layout

--- a/src/components/_bookingForm.scss
+++ b/src/components/_bookingForm.scss
@@ -6,6 +6,7 @@ form.bookingForm {
     grid-template-rows: repeat(auto-fill, 30px);
     align-items: center;
     max-width: 400px;
+    height: 100%;
     gap: 10px;
     margin: 0 auto;
     padding: 2rem;
