--- a/src/_app.scss
+++ b/src/_app.scss
@@ -36,9 +36,10 @@ main {
   margin-top: 123px;
   grid-template-columns: 1fr;
   grid-template-rows: 406px auto-fill 417px;
-
+  
   @media screen and (max-width:$small-scrn) {
     & {
+      height: auto;
       grid-template-rows: auto 1fr auto;
     }
   }
