--- a/src/components/_confirmed.scss
+++ b/src/components/_confirmed.scss
@@ -3,9 +3,13 @@
 section.confirmed {
     display: grid;
     width: 500px;
-    grid-template-rows: repeat(auto-fill, 100px);
+    height: auto;
+    grid-template-rows: repeat(auto-fill, 1fr);
+    gap: 3rem;
+    padding: 2rem 0;
     margin: 0 auto;
     font-family: $karla;
+    grid-row: 1/3;
 
     h3 {
         margin-top: 1rem;
